finished cartridge and css

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
 	<title>Catridge Data</title>
 </head>
 <style>
+	svg{
+		padding: 1px;
+	}
 	path {
 	fill: none;
 	stroke: black;
-  	stroke-width: 1;
+  	stroke-width: 0.1;
+  	clip-path: none;
 	}
 	.cartridge {
 		padding: 100px;
+		width: 1000px;
+		height: 1000px;
 	}
 </style>
 
