--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 <body>
 
-<div class="bar">
-<div class="cartridge">
-</div>
-<div class="bullet"></div>
-<bar>
+	<div class="bar">
+		<div class="cartridge"></div>
+		<div class="bullet"></div>
+	<bar>
 	
 </body>
 <script src="app.js"></script>
